--- a/index.html
+++ b/index.html
@@ -139,6 +139,13 @@ src="https://www.facebook.com/tr?id=2045086675920666&ev=PageView&noscript=1"
       </div>
     </div>
   </div>
+  
+<footer style="position: absolute; bottom: 0px; background-color: rgb(0, 255, 251); width: 100%; ">
+    <div class="" style="display: flex; gap: 10px; place-content: center; place-items: center;">
+        <span style="color:black;" > Advertisment By</span> <strong> <a href="https://t.me/digitalranjan24" style="color: red;" target="_blank" >DigitalRanjan</a> </strong>
+    </div>
+</footer>
+
   <script>
  document.addEventListener('contextmenu', function (e) {
       e.preventDefault();
